--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,1 +1,35 @@
+.textContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 3rem 1rem 3rem 12rem;
 
+    & > * {
+        margin: 1rem;
+    }
+
+    div {
+        font-size: 2.5rem;
+        text-transform: uppercase;
+
+        span {
+            color: rgb(6, 134, 57);
+            text-shadow: 0px 0px 6px rgba(150, 150, 150, 0.505);
+        }
+    }
+
+    button {
+        width: 10rem;
+        text-transform: uppercase;
+    }
+
+    p {
+        font-weight: 600;
+        font-size: 1.2rem;
+    }
+}
+
+.imageContainer {
+    padding: 3rem 1rem;
+}
