--- a/components/Profile/Profile.module.scss
+++ b/components/Profile/Profile.module.scss
@@ -2,34 +2,77 @@
     padding: 3rem 2rem 3rem 8rem;
 }
 
+.netWorthTitle {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    width: 60%;
+    margin-bottom: 2rem;
+
+    h1 {
+        margin-bottom: 0;
+        font-size: 1.5rem;
+    }
+
+    span {
+        font-size: 1.5rem;
+    }
+}
+
 .profileInfoContainer {
     padding: 3rem 8rem 3rem 2rem;
 }
 
+.chartContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .accountListContainer {
     border: 1px solid #000;
-    
-    .accountListHeader {
-        display: flex;
+}
+
+.accountListHeader {
+    display: flex;
+    padding: 1rem;
+}
+
+.accountListHeaderTitle {
+    display: flex;
+    justify-content: center;
+}
+
+.accountsList {
+    padding: 1rem 1.5rem;
+}
+
+.accountsListItem {
+    display: flex;
+    justify-content: space-between;
+}
+
+.accountListAddBtn {
+    display: flex;
+    justify-content: flex-end;
+
+    button {
+        height: 2rem;
+        border: none;
         padding: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-        .accountListHeaderTitle {
-            display: flex;
-            justify-content: center;
-        }
+        background-color: #000;
+        color: #fff;
+        font-size: 1.3rem;
+        cursor: pointer;
 
-        .accountListAddBtn {
-            display: flex;
-            justify-content: flex-end;
-        }
-    }
-
-    .accountsList {
-        padding: 1rem 1.5rem;
-
-        .accountsListItem {
-            display: flex;
-            justify-content: space-between;
+        &:hover {
+            background-color: #fff;
+            color: #000;
+            border: 1px solid black;
         }
     }
 }
