--- a/components/Profile/Profile.module.scss
+++ b/components/Profile/Profile.module.scss
@@ -31,6 +31,7 @@
 
 .accountListContainer {
     border: 1px solid #000;
+
 }
 
 .accountListHeader {
@@ -83,6 +84,10 @@
             border: 1px solid black;
         }
     }
+}
+
+.editBtn {
+    margin-right: 2rem;
 }
 
 .accountFormModal {
