Add date property to model and form.

--- a/components/Profile/Profile.module.scss
+++ b/components/Profile/Profile.module.scss
@@ -44,6 +44,12 @@
     justify-content: center;
 }
 
+.accountListMonthsTabs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .accountsList {
     padding: 1rem 1.5rem;
 }
