--- a/components/Profile/Profile.module.scss
+++ b/components/Profile/Profile.module.scss
@@ -28,7 +28,7 @@
 .chartContainer {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .accountListContainer {
