--- a/components/Login/Login.module.scss
+++ b/components/Login/Login.module.scss
@@ -5,11 +5,11 @@
     background: linear-gradient( rgba(13, 13, 13, 0.742), rgba(53, 53, 53, 0.722)), url('/futuristic-background.jpeg');
     background-size: cover;
 
-    @media screen and (max-width:700px) {
+    @media only screen and (max-width:700px) {
         padding: 7rem;
     }
 
-    @media screen and (max-width:550px) {
+    @media only screen and (max-width:550px) {
         padding: 7rem 4rem;
     }
 }
