--- a/components/Login/Login.module.scss
+++ b/components/Login/Login.module.scss
@@ -2,7 +2,7 @@
     padding: 10rem;
     position: relative;
     height: 100vh;
-    background: linear-gradient( rgba(13, 13, 13, 0.742), rgba(53, 53, 53, 0.722)), url('/futuristic-background.jpeg');
+    background: linear-gradient( rgba(13, 13, 13, 0.742), rgba(53, 53, 53, 0.722)), url('/Images/futuristic-background.jpeg');
     background-size: cover;
 
     @media only screen and (max-width:700px) {
