--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -19,14 +19,31 @@
         }
     }
 
-    button {
+    .ctaBtn {
         width: 10rem;
         text-transform: uppercase;
+        border: none;
+        border-radius: 5px;
+        padding: 1rem;
+        background-color:rgb(0, 107, 137);
+        color: #fff;
+        font-size: 1.1rem;
+        cursor: pointer;
+        transition: all .2s !important;
+
+        &:hover {
+            box-shadow:2px 2px 8px rgba(116, 116, 116, 0.499);
+            transform: translateY(-5px);
+        }
     }
 
     p {
         font-weight: 600;
         font-size: 1.2rem;
+
+        span {
+            color:rgb(188, 1, 202);
+        }
     }
 }
 
