Update CSS for contact form and footer.

--- a/components/ContactForm/ContactForm.module.scss
+++ b/components/ContactForm/ContactForm.module.scss
@@ -1,3 +1,9 @@
+.container {
+    background-color:rgba(151, 151, 151, 0.183);
+    padding: 1rem;
+    border-bottom: 0.5px solid rgba(0, 0, 0, 0.026);
+}
+
 .title {
     display: flex;
     justify-content: center;
