--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -2,8 +2,9 @@
     width: 100vw;
     height: 100%;
     padding: 3rem;
-    background: linear-gradient( rgba(247, 244, 239, 0.635), rgba(180, 180, 180, 0.706)) , url('/Images/sfAirview.jpeg');
+    background: linear-gradient(to right, rgba(18, 18, 18, 0.889), rgba(41, 41, 41, 0.676)) , url('/Images/black-background.webp');
     background-size: cover;
+    color: #fff;
 }
 
 .footerMainContent {
