--- a/components/Profile/Profile.module.scss
+++ b/components/Profile/Profile.module.scss
@@ -50,6 +50,7 @@
 
 .accountListContainer {
     border: 1px solid #000;
+    margin-bottom: 1rem;
 
     @media only screen and (max-width: 992px) {
         margin-top: 6rem;
